feat(UPI-1146): update prereqs to be consistent across umap pages
Changes:
- update prereqs for umap, mandate, refunds - disputes, notification pages
to be consistent with onboarding and payment pages

Closes UPI-1146

--- a/content/payments/umap/mandates/generic/unpause.mdx
+++ b/content/payments/umap/mandates/generic/unpause.mdx
@@ -7,13 +7,13 @@ visible_in_sidebar: true
 
 ## Unpausing a paused mandate
 
-<Card padding="small" shape="rounded">
-    <a href="/payments/umap/mandates/generic" target="_blank">
-        UPI Autopay Generic Operations ↗
-    </a>
-    <p>
-        Explore other UMAP UPI Autopay generic operations here
-    </p>
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium">
+        <strong>Prerequisites - </strong>
+        <Link href="/payments/umap/mandates/generic">
+            UPI Autopay Generic Operations ↗
+        </Link>
+    </Text>
 </Card>
 
 <hr class="primary"/>
