--- a/content/payments/umap/mandates/otm/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/otm/pre-debit-notify.mdx
@@ -7,13 +7,13 @@ visible_in_sidebar: true
 
 ## Send a pre debit notification
 
-<Card padding="small" shape="rounded">
-    <a href="/payments/umap/mandates/otm/create" target="_blank">
-        Create one time mandate ↗
-    </a>
-    <p>
-        Read about one time mandate creation, if you haven't already
-    </p>
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium">
+        <strong>Prerequisites - </strong>
+        <Link href="/payments/umap/mandates/otm/create">
+            Create one time mandate ↗
+        </Link>
+    </Text>
 </Card>
 
 <hr class="primary"/>
