--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -9,23 +9,23 @@ visible_in_sidebar: true
 
 <Row>
     <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <a href="/payments/umap/merchant-onboarding" target="_blank">
-                Aggregator Merchant Onboarding ↗
-            </a>
-            <p>
-                If you are an aggregator explore other UMAP products here if you haven't already
-            </p>
+        <Card padding="nano" shape="rounded" marginBottom="micro">
+            <Text size="medium" marginBottom="none" paddingRight="medium">
+                <strong>Prerequisites (for aggregators)- </strong>
+                <Link href="/payments/umap/merchant-onboarding">
+                    Aggregator Merchant Onboarding ↗
+                </Link>
+            </Text>
         </Card>
     </Portion>
     <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <a href="/payments/umap/api-integration/merchants" target="_blank">
-                Merchant API Integration ↗
-            </a>
-            <p>
-                If you are a merchant explore other UMAP products here if you haven't already
-            </p>
+        <Card padding="nano" shape="rounded" marginBottom="micro">
+            <Text size="medium" marginBottom="none" paddingRight="medium">
+                <strong>Prerequisites (for merchants)- </strong>
+                <Link href="/payments/umap/api-integration/merchants">
+                    Merchant API Integration ↗
+                </Link>
+            </Text>
         </Card>
     </Portion>
 </Row>
