--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -7,13 +7,13 @@ visible_in_sidebar: true
 
 ## Mandates Notifications & Alerts
 
-<Card padding="small" shape="rounded">
-    <a href="/payments/umap/mandates" target="_blank">
-        UPI Autopay Overview ↗
-    </a>
-    <p>
-        Explore UMAP UPI Autopay products here
-    </p>
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium">
+        <strong>Prerequisites - </strong>
+        <Link href="/payments/umap/mandates">
+            UPI Autopay Overview ↗
+        </Link>
+    </Text>
 </Card>
 
 <hr class="primary"/>
