--- a/content/payments/umap/refunds-disputes/check-refund-status-api.mdx
+++ b/content/payments/umap/refunds-disputes/check-refund-status-api.mdx
@@ -7,13 +7,13 @@ visible_in_sidebar: true
 
 ## Check Refund Status API
 
-<Card padding="small" shape="rounded">
-    <a href="/payments/umap/refunds-disputes/create-refund-api" target="_blank">
-        Create refund ↗
-    </a>
-    <p>
-        Read about issuing refunds, if you haven't already
-    </p>
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium">
+        <strong>Prerequisites - </strong>
+        <Link href="/payments/umap/refunds-disputes/create-refund-api">
+            Create refund ↗
+        </Link>
+    </Text>
 </Card>
 
 <hr class="primary"/>
