--- a/content/payments/umap/mandates/generic.mdx
+++ b/content/payments/umap/mandates/generic.mdx
@@ -7,21 +7,21 @@ visible_in_sidebar: true
 
 ## Generic Operations
 
-<Card padding="small" shape="rounded">
-    <a href="/payments/umap/mandates" target="_blank">
-        UPI Autopay Overview ↗
-    </a>
-    <p>
-        Explore other UMAP UPI Autopay products here
-    </p>
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium">
+        <strong>Prerequisites - </strong>
+        <Link href="/payments/umap/mandates">
+            UPI Autopay Overview ↗
+        </Link>
+    </Text>
 </Card>
 
 <hr class="primary"/>
 
 Other operations that can be performed on a mandate once it is <b>LIVE</b>
 <ul>
-    <li>Updating a mandate. Read more <a href="/payments/umap/mandates/generic/update" target="_blank">here</a></li>
-    <li>Revoking a mandate. Read more <a href="/payments/umap/mandates/generic/revoke" target="_blank">here</a></li>
-    <li>Pausing a mandate. Read more <a href="/payments/umap/mandates/generic/pause" target="_blank">here</a></li>
-    <li>Unpausing a paused mandate. Read more <a href="/payments/umap/mandates/generic/unpause" target="_blank">here</a></li>
+    <li>Updating a mandate. Read more <Link href="/payments/umap/mandates/generic/update">here</Link></li>
+    <li>Revoking a mandate. Read more <Link href="/payments/umap/mandates/generic/revoke">here</Link></li>
+    <li>Pausing a mandate. Read more <Link href="/payments/umap/mandates/generic/pause">here</Link></li>
+    <li>Unpausing a paused mandate. Read more <Link href="/payments/umap/mandates/generic/unpause">here</Link></li>
 </ul>
