--- a/content/payments/umap/mandates/otm/check-status.mdx
+++ b/content/payments/umap/mandates/otm/check-status.mdx
@@ -7,13 +7,13 @@ visible_in_sidebar: true
 
 ## Check mandate payment status
 
-<Card padding="small" shape="rounded">
-    <a href="/payments/umap/mandates/otm/execute" target="_blank">
-        Execute Mandate ↗
-    </a>
-    <p>
-        Read about one time mandate execution, if you haven't already
-    </p>
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium">
+        <strong>Prerequisites - </strong>
+        <Link href="/payments/umap/mandates/otm/execute">
+            Execute Mandate ↗
+        </Link>
+    </Text>
 </Card>
 
 <hr class="primary"/>
