--- a/content/payments/umap/mandates/otm/execute.mdx
+++ b/content/payments/umap/mandates/otm/execute.mdx
@@ -7,13 +7,13 @@ visible_in_sidebar: true
 
 ## Execute mandate
 
-<Card padding="small" shape="rounded">
-    <a href="/payments/umap/mandates/otm/pre-debit-notify" target="_blank">
-        Pre debit notification ↗
-    </a>
-    <p>
-        Read about one time mandate pre debit notification, if you haven't already
-    </p>
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium">
+        <strong>Prerequisites - </strong>
+        <Link href="/payments/umap/mandates/otm/pre-debit-notify">
+            Pre debit notification ↗
+        </Link>
+    </Text>
 </Card>
 
 <hr class="primary"/>
