--- a/content/payments/umap/mandates/single-block-multi-debit/execute.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/execute.mdx
@@ -7,13 +7,13 @@ visible_in_sidebar: true
 
 ## Execute mandate
 
-<Card padding="small" shape="rounded">
-    <a href="/payments/umap/mandates/single-block-multi-debit/create" target="_blank">
-        Create single block multi debit mandate ↗
-    </a>
-    <p>
-        Read about single block multi debit mandate creation, if you haven't already
-    </p>
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium">
+        <strong>Prerequisites - </strong>
+        <Link href="/payments/umap/mandates/single-block-multi-debit/create">
+            Create single block multi debit mandate ↗
+        </Link>
+    </Text>
 </Card>
 
 <hr class="primary"/>
