--- a/content/payments/umap/notifications/disputes.mdx
+++ b/content/payments/umap/notifications/disputes.mdx
@@ -7,13 +7,13 @@ visible_in_sidebar: true
 
 ## Disputes Notifications & Alerts
 
-<Card padding="small" shape="rounded">
-    <a href="/payments/umap/refunds-disputes" target="_blank">
-        Refunds & Disputes ↗
-    </a>
-    <p>
-        Read about disputes if you haven't already
-    </p>
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium">
+        <strong>Prerequisites - </strong>
+        <Link href="/payments/umap/refunds-disputes">
+            Refunds & Disputes ↗
+        </Link>
+    </Text>
 </Card>
 
 <hr class="primary"/>
