formatting changes & diagrams updated

--- a/content/payments/umap/notifications/customer-vpa-verification.mdx
+++ b/content/payments/umap/notifications/customer-vpa-verification.mdx
@@ -9,11 +9,11 @@ visible_in_sidebar: true
 
 ### Verification Statuses
 
-**Customer VPA Valid**: Explain here
+**Customer VPA Valid**: VPA provided is valid and associated with a bank account
 
-**Customer VPA Invalid**: Explain here
+**Customer VPA Invalid**: VPA provided is invalid and account details could not be fetched
 
-**Customer VPA Failed**: Explain here
+**Customer VPA Failed**: Failed to fetch vpa details
 
 ### VPA Valid
 
