--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -64,10 +64,10 @@ This comprehensive approach ensures that merchants can efficiently manage refund
             <p>In addition to the notifications, merchants can use <b>check refund status API</b> to check if a refund is successful</p>
             <hr class="primary"/>
             <h4>Refund Statuses</h4>
-            <li><b>Refund Initiated :</b> Refund request has been create at UMAP</li>
-            <li><b>Refund Pending :</b> Refund is in queue for being processed</li>
-            <li><b>Refund Successful :</b> Refund has been successfully completed</li>
-            <li><b>Refund Failed :</b> Refund could not be processed</li>
+            <li><code>Refund Initiated :</code> Refund request has been create at UMAP</li>
+            <li><code>Refund Pending :</code> Refund is in queue for being processed</li>
+            <li><code>Refund Successful :</code> Refund has been successfully completed</li>
+            <li><code>Refund Failed :</code> Refund could not be processed</li>
             <img
                 src="https://storage.googleapis.com/strapi-assets/latest/Frame_74/Frame_74.png"
                 alt="Bridge"
@@ -113,11 +113,11 @@ This comprehensive approach ensures that merchants can efficiently manage refund
             <p>If the merchant does not prevail, a refund is issued to the customer for the disputed transaction.</p>
             <hr class="primary"/>
             <h4>Dispute Statuses</h4>
-            <li><b>Dispute Open :</b> A dispute has been created by a customer</li>
-            <li><b>Dispute Closed :</b> Merchant accepted dispute and issued a refund</li>
-            <li><b>Dispute In-Review :</b> Merchant has contested dispute and has provided evidence</li>
-            <li><b>Dispute Won :</b> Merchant evidence accepted. No chargeback required</li>
-            <li><b>Dispute Lost :</b> Merchant evidence rejected. Chargeback is created </li>
+            <li><code>Dispute Open :</code> A dispute has been created by a customer</li>
+            <li><code>Dispute Closed :</code> Merchant accepted dispute and issued a refund</li>
+            <li><code>Dispute In-Review :</code> Merchant has contested dispute and has provided evidence</li>
+            <li><code>Dispute Won :</code> Merchant evidence accepted. No chargeback required</li>
+            <li><code>Dispute Lost :</code> Merchant evidence rejected. Chargeback is created </li>
             <img
                 src="https://storage.googleapis.com/strapi-assets/latest/Frame_73/Frame_73.png"
                 alt="Bridge"
