--- a/content/payments/umap/notifications/mandates/revoke.mdx
+++ b/content/payments/umap/notifications/mandates/revoke.mdx
@@ -7,13 +7,13 @@ visible_in_sidebar: true
 
 ## Mandate Revoke Operation Notifications & Alerts
 
-<Card padding="small" shape="rounded">
-    <a href="/payments/umap/mandates/generic/revoke" target="_blank">
-        UPI Autopay Revoke ↗
-    </a>
-    <p>
-        Read about UPI Autopay revoke operation if you haven't already
-    </p>
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium">
+        <strong>Prerequisites - </strong>
+        <Link href="/payments/umap/mandates/generic/revoke">
+            UPI Autopay Revoke ↗
+        </Link>
+    </Text>
 </Card>
 
 <hr class="primary"/>
