--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -10,20 +10,20 @@ visible_in_sidebar: true
 <Row>
     <Portion desktopSpan="half">
         <Card padding="nano" shape="rounded" marginBottom="micro">
-            <Text size="medium" marginBottom="none" paddingRight="medium">
-                <strong>Prerequisites (for aggregators)- </strong>
+            <Text size="medium" marginBottom="none" paddingRight="micro">
+                <strong>Aggregator Prerequisites - </strong>
                 <Link href="/payments/umap/merchant-onboarding">
-                    Aggregator Merchant Onboarding ↗
+                    Merchant Onboarding ↗
                 </Link>
             </Text>
         </Card>
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="nano" shape="rounded" marginBottom="micro">
-            <Text size="medium" marginBottom="none" paddingRight="medium">
-                <strong>Prerequisites (for merchants)- </strong>
+            <Text size="medium" marginBottom="none" paddingRight="micro">
+                <strong>Merchant Prerequisites - </strong>
                 <Link href="/payments/umap/api-integration/merchants">
-                    Merchant API Integration ↗
+                    API Integration ↗
                 </Link>
             </Text>
         </Card>
