feat(UPI-1146): set umap quickstart as prereqs for umap refund-dispute, notfns

--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -7,28 +7,14 @@ visible_in_sidebar: true
 
 ## Refunds & Disputes
 
-<Row>
-    <Portion desktopSpan="half">
-        <Card padding="nano" shape="rounded" marginBottom="micro">
-            <Text size="medium" marginBottom="none" paddingRight="micro">
-                <strong>Aggregator Prerequisites - </strong>
-                <Link href="/payments/umap/merchant-onboarding">
-                    Merchant Onboarding ↗
-                </Link>
-            </Text>
-        </Card>
-    </Portion>
-    <Portion desktopSpan="half">
-        <Card padding="nano" shape="rounded" marginBottom="micro">
-            <Text size="medium" marginBottom="none" paddingRight="micro">
-                <strong>Merchant Prerequisites - </strong>
-                <Link href="/payments/umap/api-integration/merchants">
-                    API Integration ↗
-                </Link>
-            </Text>
-        </Card>
-    </Portion>
-</Row>
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium"> 
+        <strong>Prerequesites - </strong>
+        <a href="/payments/umap/quickstart">
+            Quickstart ↗ 
+        </a>
+    </Text>
+</Card>
 
 <hr class="primary"/>
 
